2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 564210 – SUN Studio 12 has supported visibility attribute

	* configure.in: Use visibility attribute for new enough sun cc.
	Patch by Chris Wang

2009-01-05  Tor Lillqvist  <tml@iki.fi>

	Bug 566348 - g_file_open_tmp uses the wrong g_mkstemp on win32

	* glib/gfileutils.c: Move the binary compatibility versions of
	g_file_test(), g_file_get_contents(), g_mkstemp() and
	g_file_open_tmp() last in the file. Remove the restriction that
	the XXXXXX is last in the template in the binary compatibility
	version of g_mkstemp(). Thanks to Morten Welinder and Jody
	Goldberg.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	bug 562562 – glib-2-18 branch does not build because g_assert_error 
	is used in tests

	* glib/tests/option-context.c: Fix the build. Complaint by Wouter
	Bolsterlee

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:
	
	Bug 559110 – Do not include libintl.h after glibintl.h

	* glib/glibintl.h: Define bind_textdomain_codeset in the DISABLE_NLS
	branch. Patch by Peter Kjellerstedt.

	* glib/gutil.c: Don't include libintl.h directly.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 562378 – callback return value not respected for callback option
	with no arg

	* glib/goption.c (parse_long_option): Return the parse_arg return
	value even for no-arg callbacks. Patch by Christian Persch

	* glib/tests/option-context.c: Add a test for a callback which
	returns FALSE.

2008-11-24  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.18.3 ===

	* NEWS: Updates

2008-11-24  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	* autogen.sh: Allow libtool 2.2

	* configure.in: With libtool 2.x, regenerate libtool early.
	Based on bug 552107, patch by Patryk Zawadzki

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 559413 – g_option_group_set_error_hook docs buglet
