@@ -1,3 +1,10 @@
+2009-01-09  Tor Lillqvist  <tml@iki.fi>
+
+	Bug 567138 - get_package_directory_from_module() does not free its
+	lock when failing
+
+	* glib/gwin32.c (get_package_directory_from_module): Obvious fix.
+
 2009-01-09  Matthias Clasen  <mclasen@redhat.com>
 
 	Merged from trunk:
